deploy/lb/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: sbdemo-nginx-lb
spec:
  externalIPs:
  - 192.168.29.4
  type: LoadBalancer
  ports:
   - name: "http-port"
     protocol: "TCP"
     port: 80
     targetPort: 80
  selector:
    app: sbdemo-nginx
