deploy/lb/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sbdemo-ingress
  namespace: todoweb
spec:
  rules:
  - host: sbdemo.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sbdemo-nginx-np
            port: 
              number: 80
      - path: /v2/
        pathType: Prefix
        backend:
          service:
            name: web2
            port: 
              number: 8080
  tls:
  - hosts:
    - sbdemo.example.com
    secretName: tls-sbdemo
